# rwx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  refactor_perf.yml
.github/workflows/: ci.yml  release.yml
snap/: snapcraft.yaml
src/: app.rs  main.rs  permissions.rs  ui.rs
