[package]
name = "rwx"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["@vncsmnl"]
description = "A file explorer for your terminal"
keywords = ["file-manager", "terminal", "tui"]
categories = ["command-line-utilities"]
repository = "https://github.com/vncsmnl/rwx"
readme = "README.md"

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29.0"
clap = { version = "4.6.2", features = ["derive"] }
walkdir = "2.5.0"
nix = { version = "0.31.3", features = ["user", "fs"] }
