[package]
name = "rwx"
version = "1.0.2"
edition = "2024"
license = "MIT"
authors = ["@vncsmnl"]
description = "A file explorer for your terminal"
keywords = ["file-manager", "terminal", "tui"]
categories = ["command-line-utilities"]
repository = "https://github.com/vncsmnl/rwx"
readme = "README.md"

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29.0"
clap = { version = "4.6.2", features = ["derive"] }
walkdir = "2.5.0"
nix = { version = "0.31.3", features = ["user", "fs"] }

[package.metadata.deb]
maintainer = "@vncsmnl"
assets = [
    ["target/release/rwx", "usr/bin/rwx", "755"],
    ["LICENSE", "usr/share/doc/rwx/LICENSE", "644"],
    ["README.md", "usr/share/doc/rwx/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rwx", dest = "/usr/bin/rwx", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/rwx/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/rwx/README.md", mode = "644" },
]

